src/scss/partials/_custom.scss
body {
    font-family: sans-serif;
    padding: 70px 5px 0;
}

a {
    cursor: pointer;

    &:hover {
        text-decoration: none;
    }
}

.center {
    display: block;
    margin: auto;
}

.name {
    overflow: hidden;
    max-width: 100%;
}

.refreshBtn {
    font-size: 20px;
    &:before {
        vertical-align: text-top;
    }
}

.episode, .subtitle {
    position: relative;
    @include border-radius(0);
    margin: 0;
    padding: 0;
    line-height: 20px;
    overflow: auto;
    width: 100%;
    cursor: pointer;
    border: {
        left: none;
        right: none;
        top: none;
    }
    &:last-child {
        border-bottom: none;
    }
    .tooltip {
        right: -10px;
        top: -25px;

        .tooltip-inner {
            max-width: 100%;
        }
    }
    .popover {
        color: $gray-dark;
    }
    & > i {
        vertical-align: middle;
        margin-left: 10px;
    }
    .name {
        display: block;

        .label {
            font-size: 90%;
            @include border-radius(2px);
        }
        .glyphicon:before {
            vertical-align: baseline;
        }
    }
}

.no-subtitle {
    cursor: default;
}

.episode {
    loader, .glyphicon-paperclip {
        position: absolute;
        right: 10px;
        top: 8px;
        margin: -2px 6px 0;
    }
    .name {
        margin-right: 25px;
        padding: 10px 15px;
    }
}

.ellipsis {
    @include ellipsis();
}

.episodesList, .seasonsList {
    @include transition(all .5s ease-in-out);

    .glyphicon-filter {
        display: none;
    }
}

.subPackWrapper, .epListWrapper {
    padding: 0;

    & > .panel-heading {
        margin: 0;
        @include ellipsis();
    }
}

.subPackWrapper {
    margin: 6px 0;
}

.epListWrapper {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.subtitlesList {
    margin: .75rem 0;

    .qualite, .qualite5 {
        background-color: #468847;
        color: #fff;
    }
    .qualite4 {
        background-color: #97a305;
        color: #fff;
    }
    .qualite3 {
        background-color: #FFC40D;
        color: #000;
    }
    .qualite2 {
        background-color: #f87c08;
        color: #000;
    }
    .qualite1 {
        background-color: #B94A48;
        color: #fff;
    }
    .success {
        color: #468847;
    }
    .error {
        color: #d9534f;
    }
}

#mainView {
    .page-header {
        margin-top: 0;
        h1 {
            margin-top: 0;
        }
        .loader {
            font-size: 20px;
        }

    }
}

.page-header {
    padding-bottom: 9px;
    margin: 40px 0 20px;
    border-bottom: 1px solid #eeeeee;
}

.lastEpisodes {
    .card {
        margin-bottom: 20px;
        overflow: auto;
        padding: 4px;
        border-radius: 3px;

        &:hover {
            box-shadow: 0 0 8px rgba(0,0,0,0.5);
        }

        a {
            display: flex;
            flex-direction: row;
        }
    }
    .card-title {
        text-transform: capitalize;
        @include ellipsis();
        font-size: 1.5rem;
        display: block;
        @include media-breakpoint-down(md) {
            text-align: center;
        }
    }
    .card-text {
        font-size: 1.1rem;
    }
    .card-subtitle {
        font-size: 0.85rem;
    }
    .card-title, .card-text, .card-subtitle {
        line-height: 2rem;
        margin: 0;
    }
    .card-text-wrapper {
        @include media-breakpoint-down(md) {
            text-align: center;
        }

        @include media-breakpoint-up(lg) {
            display: flex;
            flex-wrap: wrap;
            margin-left: -.9375rem;
            margin-right: -.9375rem;
        }
    }
    .imgWrapper {
        vertical-align: middle;
        text-align: right;
        @include media-breakpoint-up(lg) {
            line-height: 136px;
        }
        @include media-breakpoint-down(md) {
            padding-bottom: 1.25rem;
        }

        img {
            max-width: 100%;
        }
    }
}

.show {
    .page-header {
        text-align: center;

        img {
            max-width: 100%;
        }

        #overview {
            text-align: justify;
            margin-bottom: 0;
            margin-top: 10px;

            .content {
                padding: 10px;
            }
        }
    }
}

footer {
    padding: 10px 15px;
    background-color: $panel-footer-bg;
    border-top: 1px solid #dddddd;
    border-bottom-right-radius: 1px;
    border-bottom-left-radius: 1px;
    margin: 20px -5px 0;
    text-align: center;

    img {
        max-height: 30px;
    }
}

#paramsModal {
    .select2 {
        min-width: 100%;
    }
}

/**** NG ANIMATIONS ****/
.fade-in.ng-hide-remove, .fade-in.ng-enter, .fade-out.ng-hide-add, .fade-out.ng-leave {
    @include transition(all linear 0.25s);
    display: block !important;
}

.fade-in {
    &.ng-hide-remove, &.ng-enter {
        opacity: 0;
        height: 0;

        &.ng-hide-remove-active, &.ng-enter-active {
            opacity: 1;
            height: auto;
        }
    }
}

.fade-out {
    &.ng-hide-add, &.ng-leave {
        opacity: 1;
        height: 0;

        &.ng-hide-add-active, &.ng-leave-active {
            opacity: 0;
            height: auto;
        }
    }
}

